<resources>
    <string name="app_name">Apollon</string>
    <string name="shortly">Shortly</string>
    <string name="let_s_get_started">Let’s get started!</string>
    <string name="paste_your_first_link_into_the_field_to_shorten_it">Paste your first link into \n the field to shorten it</string>
    <string name="shorten_a_link_here">Shorten a link here ...</string>
    <string name="shorten_it">SHORTEN IT!</string>
    <string name="delete_button">delete button</string>
    <string name="copy">COPY</string>
    <string name="add_link_hint">Please add a link here</string>
    <string name="shortened_link">Shortened Link</string>
    <string name="copied">COPIED!</string>
</resources>